Add rationales for all of the patterns

--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -1,5 +1,5 @@
 .btn {
-  transition: all .3s linear;
+  transition: all .2s linear;
   background-color: var(--color-primary-dark);
   border-color: var(--color-primary-dark);
   color: var(--color-secondary);
@@ -7,13 +7,13 @@
 }
 
 .btn:hover {
-  transition: all .3s linear;
+  transition: all .2s linear;
   background-color: var(--color-primary-light);
   border-color: var(--color-primary-light);
 }
 
 .btn-ghost {
-  transition: all .3s linear;
+  transition: all .2s linear;
   background-color: transparent;
   color: var(--color-primary-dark);
 }
@@ -24,33 +24,33 @@
 }
 
 .btn-light {
-  transition: all .3s linear;
+  transition: all .2s linear;
   background-color: var(--color-primary-light);
   border-color: var(--color-primary-light);
 }
 
 .btn-light:hover {
-  transition: all .3s linear;
+  transition: all .2s linear;
   background-color: var(--color-primary-dark);
   border-color: var(--color-primary-dark);
 }
 
 .btn-submit {
-  transition: all .3s linear;
-  border-radius: 40px;
+  transition: all .2s linear;
+  border-radius: 2em;
   border-color: var(--color-light-red);
   background-color: var(--color-light-red);
 }
 
 .btn-submit:hover {
-  transition: all .3s linear;
+  transition: all .2s linear;
   background-color: var(--color-secondary);
   color: var(--color-light-red);
   border-color: var(--color-light-red);
 }
 
 .btn-attention {
-  transition: all .3s linear;
+  transition: all .2s linear;
   border-radius: 40px;
   color: var(--color-primary-dark);
   border-color: var(--color-yellow);
@@ -59,7 +59,7 @@
 }
 
 .btn-attention:hover {
-  transition: all .3s linear;
+  transition: all .2s linear;
   color: var(--color-yellow);
   border-color: var(--color-primary-dark);
   background-color: var(--color-primary-dark);
@@ -68,4 +68,19 @@
 .search-btn {
   border-radius: 1.5em;
   padding: 1em;
+}
+
+.ic-search-btn {
+  transition: all .2s linear;
+  border-radius: 50%;
+  background-color: var(--color-light-red);
+  color: var(--color-secondary);
+  border-color: var(--color-light-red);
+}
+
+.ic-search-btn:hover {
+  transition: all .2s linear;
+  background-color: var(--color-secondary);
+  color: var(--color-light-red);
+  border-color: var(--color-light-red);
 }
