--- a/_patterns/forms/forms.css
+++ b/_patterns/forms/forms.css
@@ -6,7 +6,7 @@
 .search-field:not([type="checkbox"]),
 .search-field:not([type="radio"]) {
   border-radius: 2em;
-  border-color: var(--color-secondary-dark);
+  border-color: var(--color-primary);
   padding: 1rem;
   max-width: 25em;
 }
@@ -36,9 +36,13 @@
   padding: 0 1em;
 }
 
-[type="checkbox"] + label::before {
+[type="checkbox"] + .check::before {
   border-color: var(--color-primary);
   border-radius: .2em;
+}
+
+[type="radio"] + .radio::before {
+  border-color: var(--color-primary);
 }
 
 .flag-optional {
