--- a/css/theme.css
+++ b/css/theme.css
@@ -4,7 +4,7 @@
   --color-primary-dark: #372862;
 
   --color-secondary: #fff;
-  --color-secondary-dark: #bfbfbf;
+  --color-secondary-dark: #f0f0f0;
   --color-secondary-darker: #7f7f7f;
 
 
