Add form fields, and a navigation

--- a/_patterns/forms/newsletter.css
+++ b/_patterns/forms/newsletter.css
@@ -1,8 +1,9 @@
 .content {
-  position: absolute;
+  display: block;
+  width: 70%;
 }
 
 .sub {
-  position: relative;
-  left: 13em;
+  display: block;
+  left: 1px;
 }
