--- a/_patterns/forms/search.css
+++ b/_patterns/forms/search.css
@@ -1,5 +1,4 @@
 .search {
-  background-color: var(--color-neutral-beige);
   color: var(--color-primary);
   width: 1900px;
 }
@@ -7,4 +6,33 @@
 .search input[type=text] {
   border: none;
   font-size: 17px;
+}
+
+* {box-sizing: border-box;}
+
+/* Style the input container */
+.input-container {
+  display: flex;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+/* Style the form icons */
+.icon {
+  padding: 15px;
+  background: var(--color-primary-light);
+  color: white;
+  min-width: 50px;
+  text-align: center;
+}
+
+/* Style the input fields */
+.input-field {
+  width: 100%;
+  padding: 10px;
+  outline: none;
+}
+
+.input-field:focus {
+  border: 2px solid var(--color-primary-light);
 }
