Add defaults page

--- a/_layouts/defaults.html
+++ b/_layouts/defaults.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 
-{% pattern header/header %}
-{% pattern footer/footer %}
+  {% pattern header/header %}
+  {{content}}
+  {% pattern footer/footer %}
 
 </body>
 </html>
