--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -53,3 +53,8 @@
   border-color: var(--color-primary);
   background-color: var(--color-primary-light);
 }
+
+.addtocart {
+  position: center center;
+  display: inline-block;
+}
