--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -58,4 +58,7 @@
   color: var(--color-primary-light);
   border-color: var(--color-secondary);
   background-color: var(--color-secondary);
+.addtocart {
+  position: center center;
+  display: inline-block;
 }
