--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -54,11 +54,12 @@
   background-color: var(--color-primary-light);
 }
 
+.addtocart {
+  position: center center;
+  max-height: 90px;
+}
+
 .btn-plus, .btn-minus {
   color: var(--color-primary-light);
   border-color: var(--color-secondary);
   background-color: var(--color-secondary);
-.addtocart {
-  position: center center;
-  display: inline-block;
-}
