Add the footer and header patterns to the ecommerce website

--- a/_patterns/navigations/navigation.css
+++ b/_patterns/navigations/navigation.css
@@ -15,6 +15,14 @@
   font-family: var(--font-secondary);
 }
 
+.social-nav li a {
+  color: var(--color-secondary);
+}
+
+.social-nav li a:hover {
+  color: var(--color-light-red);
+}
+
 .page-nav .hover:hover {
   text-decoration: underline;
 }
@@ -80,4 +88,21 @@
 .side-nav .side-current {
   border-left: 2px solid var(--color-primary-light);
   color: var(--color-primary-light);
+}
+
+.tool-bar {
+  background-color: var(--color-primary);
+}
+
+.tool-bar li > a {
+  color: var(--color-secondary);
+  text-decoration: none;
+}
+
+.tool-bar li:last-child svg {
+  color: var(--color-yellow);
+}
+
+.tool-bar li:hover {
+  background-color: var(--color-primary-dark);
 }
