--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>GeoHub</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="/css/main.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg">
 
   {% pattern header/header %}
   {{content}}
