--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -1,4 +1,4 @@
-.card, img {
+.card {
   border-width: 4px;
   border-color: var(--color-secondary);
   border-style: solid;
@@ -7,7 +7,6 @@
 .blackbg {
   background-color: var(--color-secondary);
   width: 100%;
-  float: right;
 }
 
 .price {
