Add a whole mess of stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,8 @@
 </head>
 <body>
 
-  {% pattern header/header-sec %}
   {{content}}
   {% pattern footer/footer %}
-
+<script src="/js/main.js"></script>
 </body>
 </html>
