--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
-    <title>GeoHub</title>
+    <title>Flora and Zip</title>
     <meta name="viewport" content="width-device-width,initial-scale=1">
     <link href="/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Aleo|Lato|Open+Sans" rel="stylesheet">
