--- a/_patterns/nav/nav.css
+++ b/_patterns/nav/nav.css
@@ -23,6 +23,26 @@ h1 {
   color: #fff;
 }
 
+.nav-btn {
+  background-color: transparent;
+  border-bottom: 2px solid transparent ;
+  color: var(--color-primary);
+  text-decoration: none;
+}
+
+.nav-btn:hover {
+  background-color: transparent;
+  border-color: var(--color-primary);
+  color: var(--color-primary);
+}
+
+.current {
+  background-color: transparent;
+  border-bottom: 2px solid var(--color-primary);
+  background-color: transparent;
+  color: var(--color-primary);
+}
+
 @media only screen and (min-width:38em) {
   .nav-ul li {
     display: inline-block;
