--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -5,6 +5,7 @@
   font-family: var(--font-secondary);
   font-weight: normal;
   font-style: normal;
+  display: block;
 }
 
 .btn:hover {
@@ -32,8 +33,8 @@
   font-family: var(--font-secondary);
   font-weight: normal;
   font-style: normal;
-  width: 350px;
   text-align: center;
+  display: block;
 }
 
 .btn-wide:hover {
