--- a/_patterns/cards/view-card.css
+++ b/_patterns/cards/view-card.css
@@ -7,3 +7,11 @@
   top: 100px;
   transform: translate(0, -25px);
 }
+
+.view-card {
+  background-color: var(--color-neutral-beige);
+}
+
+.img {
+  background-color: var(--color-neutral-beige);
+}
