--- a/_patterns/forms/newsletter.css
+++ b/_patterns/forms/newsletter.css
@@ -1,9 +1,31 @@
-.content {
-  display: block;
-  width: 70%;
+.newslet {
+  color: var(--color-primary);
+  width: 1900px;
 }
 
-.sub {
-  display: block;
-  left: 1px;
+.newslet input[type=text] {
+  border: none;
+  font-size: 17px;
+}
+
+* {box-sizing: border-box;}
+
+/* Style the input container */
+.input-container {
+  display: flex;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+/* Style the form icons */
+.icon {
+  padding: 15px;
+  background: var(--color-primary-light);
+  color: white;
+  min-width: 50px;
+  text-align: center;
+}
+
+.input-field:focus {
+  border: 2px solid var(--color-primary-light);
 }
