Add a lot of content to the pattern library

--- a/_patterns/header/header.css
+++ b/_patterns/header/header.css
@@ -84,7 +84,7 @@
 }
 
 .sec-nav .current {
-  background-color: var(--color-secondary-darker);
+  background-color: var(--color-primary-light);
   border-bottom-color: transparent;
 }
 
