--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -36,6 +36,10 @@
   color: var(--color-secondary-darker);
 }
 
+.product .price {
+  text-align: left;
+}
+
 .sale-price {
   color: var(--color-light-red);
 }
@@ -54,4 +58,17 @@
 
 .icon-card i {
   color: var(--color-primary-light);
+}
+
+@media only screen and (min-width: 60em) {
+
+  .product .price > p {
+    text-align: right;
+    border-left: 1px solid var(--color-primary-dark);
+  }
+
+  .product:hover .price > p {
+    border-left-color: : var(--color-primary-light);
+  }
+
 }
