--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -5,7 +5,7 @@
 }
 
 .btn:hover {
-  background-color: var(--color-primary-light);
+  background-color: var(--color-neutral-dark-grey);
   border-color: transparent;
 }
 
