--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -12,3 +12,9 @@
 .price {
   color: var(--color-primary-light);
 }
+
+.wonderland-featured {
+  border-width: 4px;
+  border-color: var(--color-secondary);
+  border-style: solid;
+}
