--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -2,6 +2,7 @@
   border-width: 4px;
   border-color: var(--color-secondary);
   border-style: solid;
+  background-color: var(--color-primary);
 }
 
 .blackbg {
@@ -17,4 +18,6 @@
   border-width: 4px;
   border-color: var(--color-secondary);
   border-style: solid;
+  background-color: var(--color-primary);
+  max-width: 400px;
 }
