Add new card to home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <title>Archaic Records</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="/css/main.css" rel="stylesheet">
+  <link href="https://use.typekit.net/slb4bkf.css" rel="stylesheet">
 </head>
 <body>
 
