--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<h1>{{page.name}}</h1>
-<p>{{page.description}}</p>
-<img src="{{page.image}}" alt="">
+<h1 class="island-1-2 push-0">{{page.name}}</h1>
+<p class="island-1-2 push-0">{{page.description}}</p>
+<img class="grid gutter-1-4 island-1-2 push-0" src="{{page.image}}" alt="">
