Add the homepage and convert many of the patterns to become variabled

--- a/_patterns/sectional/sections.css
+++ b/_patterns/sectional/sections.css
@@ -7,6 +7,10 @@
   border-bottom: 1px solid var(--color-primary);
 }
 
+.halfsec-banner {
+  border: 2px solid var(--color-primary-dark);
+}
+
 @media only screen and (min-width: 38em) {
 
   .sec-content,
