--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -48,7 +48,13 @@
   color: var(--color-secondary);
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
-  font-family: var(--font-secondary)
+  font-family: var(--font-secondary);
+  transition: all .2s linear;
+}
+
+.promo-card:hover .promo-title {
+  background-color: rgba(0, 0, 0, 0.8);
+  transition: all .2s linear;
 }
 
 .icon-card {
@@ -64,6 +70,10 @@
 
   .product .price > p {
     text-align: right;
+  }
+
+  .product .price > p:not(.sale-price),
+  .product .price > del {
     border-left: 1px solid var(--color-primary-dark);
   }
 
