--- a/_patterns/navigations/navigation.css
+++ b/_patterns/navigations/navigation.css
@@ -4,6 +4,10 @@
   font-family: var(--font-secondary);
 }
 
+.breadcrumb {
+  border-bottom: 1px solid var(--color-primary-dark);
+}
+
 .slash {
   background: url(../../images/slash.svg) center right / 1rem auto no-repeat;
   padding-right: 1.2rem;
