Add a read me file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,11 @@
     <link href="https://fonts.googleapis.com/css?family=Aleo|Lato|Open+Sans" rel="stylesheet">
   </head>
   <body>
-
-    {% pattern nav/nav %}
-    {{content}}
-    {% pattern footer/Footer %}
+    <header>
+      {% pattern nav/nav %}
+      {{content}}
+      {% pattern footer/Footer %}
+    </header>
 
   </body>
 </html>
