--- a/_patterns/banner/banners.css
+++ b/_patterns/banner/banners.css
@@ -11,6 +11,18 @@
   left: 0em;
 }
 
+.plain-banner {
+  color: #fff;
+  bottom: 1em;
+  background: var(--color-primary);
+  background-size: cover;
+  background-position: left bottom;
+}
+
+.plain-banner-text {
+  color: #fff;
+}
+
 @media only screen and (min-width: 38em) {
 
   .banner-content {
