--- a/_patterns/navigation/top-nav.css
+++ b/_patterns/navigation/top-nav.css
@@ -50,8 +50,13 @@ header {
 }
 
 .current {
-  background-color: var(--color-primary);
-  color: var(--color-primary-light);
+  border-bottom: 5px solid var(--color-primary);
+  color: #fff;
+  border-radius: 3px;
+}
+
+.shopping-cart a:hover {
+  border-bottom: 5px solid var(--color-primary);
 }
 
 @media only screen and (min-width: 60em) {
