--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -2,3 +2,7 @@
   border: 4px solid var(--color-primary);
   border-radius: var(--border-radius);
 }
+
+.background {
+  background-color: var(--color-primary-light);
+}
