Add in section to product layout

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 class="island-1-2 push-0">{{page.name}}</h1>
-<p class="island-1-2 push-0">{{page.description}}</p>
-<img class="grid gutter-1-4 island-1-2 push-0" src="{{page.image}}" alt="">
-{% pattern sections/sections %}
+<main class="block">
+  {% pattern sections/sections %}
+  <p class="island-1-2 push-0">{{page.description}}</p>
+</main>
