Fix font error in default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ca">
+<link href="https://fonts.googleapis.com/css?family=Almendra+SC|Aref+Ruqaa:400,700" rel="stylesheet">
+
 <head>
   <meta charset="utf-8">
   <title>GeoHub</title>
