Make a multitude of changes such as the addition of the checkout patterns, images and more

--- a/css/theme.css
+++ b/css/theme.css
@@ -37,21 +37,22 @@ a:hover {
   transition: all .1s linear;
 }
 
-ul, ol, dl {
-  color: var(--color-primary-dark);
-}
-
-blockquote {
+ul,
+ol,
+dl,
+blockquote,
+legend,
+b,
+strong,
+abbr,
+th,
+tr {
   color: var(--color-primary-dark);
 }
 
 cite {
   color: var(--color-primary-light);
   font-family: var(--font-secondary);
-}
-
-b, strong, abbr {
-  color: var(--color-primary-dark);
 }
 
 del {
