--- a/_patterns/sectional/sections.css
+++ b/_patterns/sectional/sections.css
@@ -2,6 +2,10 @@
   min-width: 38em;
 }
 
+.sec-banner {
+  overflow-x: hidden;
+}
+
 .text-section {
   border-top: 1px solid var(--color-primary);
   border-bottom: 1px solid var(--color-primary);
