--- a/css/grid.css
+++ b/css/grid.css
@@ -480,6 +480,7 @@
   .unit-m-1-4,
   .m-1-4 {
     width: 25%;
+    margin-left: -1px;
   }
 
   .unit-offset-m-1-4 {
@@ -814,6 +815,7 @@
   .unit-l-1-4,
   .l-1-4 {
     width: 25%;
+    margin-left: -1px;
   }
 
   .unit-offset-l-1-4 {
