--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
-<h1 class="island-1-2 push-0">{{page.name}}</h1>
 <p class="island-1-2 push-0">{{page.description}}</p>
-{% pattern sections/sections %}
+<div class="push">
+  {% pattern sections/sections %}
+</div>
