--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -4,4 +4,4 @@ layout: default
 
 <h1>{{page.title}}</h1>
 <p>{{page.desc}}</p>
-<img src="{{page.image}}" alt="">
+<img class="creature-image" src="{{page.image}}" alt="">
