--- a/_patterns/banners/banners.css
+++ b/_patterns/banners/banners.css
@@ -28,6 +28,29 @@
   color: var(--color-secondary);
 }
 
+.img-banner .img-banner-content {
+  color: var(--color-secondary);
+  font-family: var(--font-primary);
+  filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, .8));
+}
+
+.img-banner .img-banner-content > h2 {
+  color: var(--color-secondary);
+  font-family: var(--font-primary);
+  border-bottom: 5px solid var(--color-light-red);
+}
+
+.embed-seb {
+  padding-top: 56.25%;
+  transition: all .2s ease;
+}
+
+.text-bg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 @media only screen and (min-width: 38em) {
 
   .hb-content {
@@ -40,6 +63,11 @@
     filter: drop-shadow(0 4px 10px rgba(0, 0, 0, .5));
 
     text-align: center;
+  }
+
+  .embed-seb {
+    padding-top: 30.25%;
+    transition: all .2s ease;
   }
 
   .hero-banner {
