--- a/_patterns/navigations/navigation.css
+++ b/_patterns/navigations/navigation.css
@@ -196,6 +196,28 @@
   color: var(--color-secondary);
 }
 
+.jump-nav {
+  color: var(--color-light-red);
+  transition: color .2s, opacity .5s, visibility .5s ease;
+  opacity: 0;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  visibility: hidden;
+}
+
+.jump-nav:hover {
+  color: var(--color-yellow);
+  opacity: 1;
+  transition: all .2s ease;
+}
+
+.show {
+  opacity: .6;
+  visibility: visible;
+  transition: all .5s linear;
+}
+
 @media only screen and (min-width: 38em) {
 
   .main-check,
