Make a multitude of changes to the patterns in the website

--- a/_patterns/banners/banners.css
+++ b/_patterns/banners/banners.css
@@ -1,3 +1,7 @@
+.embed-personal {
+  padding-top: 42.15%;
+}
+
 .promo-banner {
   text-decoration: none;
   background-color: var(--color-blue);
@@ -6,10 +10,11 @@
 }
 
 .hb-content {
-  width: 100%;
-  background-color: var(--color-secondary);
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-light-red));
+  transition: background-image .5s ease;
 }
 
+.hero-banner .hb-content div > h2,
 .pb-title,
 .pb-content {
   color: var(--color-secondary);
@@ -59,8 +64,11 @@
     top: 50%;
     transform: translate(-50%, -50%);
 
+    transition: background-image .5s ease;
+
     background-color: rgba(255, 255, 255, .6);
     filter: drop-shadow(0 4px 10px rgba(0, 0, 0, .5));
+    background-image: linear-gradient(to right, rgba(216, 48, 116, 0.6), rgba(133, 99, 238, 0.6));
 
     text-align: center;
   }
