--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -14,6 +14,12 @@
   transition-duration: .3s;
 }
 
+.btn-nav {
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+}
+
 .btn-air {
   padding: 10px;
   border-bottom: 3px solid #fff;
