--- a/_patterns/cards/css/main.css
+++ b/_patterns/cards/css/main.css
@@ -11,6 +11,10 @@
   background-color: var(--color-neutral-beige);
 }
 
+a {
+  text-decoration: none;
+}
+
 .page-width {
   max-width: 1200px;
   margin: 0 auto;
@@ -27,14 +31,13 @@
 
 .border {
   border: 3px solid #000;
-  border-radius: 8px;
+  border-radius: 15px;
   max-height: 70%;
   background-color: #fff;
+  background-color: var(--color-neutral-beige);
 }
 
 .card {
-  width: 50%;
-  transform: translate(50%);
   background-color: var(--color-neutral-beige);
 }
 
@@ -52,9 +55,9 @@
 }
 
 .hover-box-caption {
-  bottom: -4em;
+  bottom: -10em;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
-  transition: all .2s linear;
+  transition: all .5s linear;
 }
 
 .hover-box:hover .hover-box-caption,
@@ -64,7 +67,7 @@
 
 .hover-box-img {
   filter: none;
-  transition: all .2s linear;
+  transition: all .5s linear;
 }
 
 .hover-box:hover .hover-box-img,
@@ -90,7 +93,9 @@
 @media only screen and (min-width: 20em) {
 
   div .border {
-    width: 50%;
+    padding: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
   }
 
 }
