--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -1,6 +1,44 @@
 ---
 layout: default
 ---
+{% pattern banner/plain heading="Crystals" details="Find the right crystal for you" %}
 
-<h1>{{page.name}}</h1>
-<p>{{page.description}}</p>
+<div class="grid pad-b-2 background">
+  <div class="unit xs-1 s-1 m-1-2 l-1-2">
+    <img class="img-flex" src="{{page.image}}" alt="">
+  </div>
+  <div class="unit xs-1 s-1 m-1-2 l-1-2 gutter">
+    <h2>{{page.name}}</h2>
+    <p>{{page.type}}</p>
+    <p class="tera">${{page.price|default:"1.00"}}</p>
+    <p><em>Size: {{page.size}}" to 1"</em></p>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      {% pattern forms/quantity %}
+      {% pattern buttons/basic text="Add to Cart" %}
+    </div>
+    <div class="pad-t-2 pad-b-2">
+      <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#facebook"></use></svg></i>
+      <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#twitter"></use></svg></i>
+      <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#pin"></use></svg></i>
+      <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#mail"></use></svg></i>
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
+      <p><em>{{page.details}}</em></p>
+      <p>{{page.description}}</p>
+    </div>
+  </div>
+</diV>
+<div class="grid island border">
+  <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
+    <h3 class="gutter-2">Details</h3>
+    <div class="max-length gutter">
+      <p>{{page.product-details}}</p>
+    </div>
+  </div>
+  <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
+    <h3 class="gutter-2">How to Use</h3>
+    <div class="max-length gutter">
+    <ol>{{page.how-to-use}}</ol>
+    </div>
+  </div>
+</div>
