Add main id of "main"

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -1,16 +1,17 @@
 ---
 layout: inside
 ---
+<main id="main" role="main" tabindex="0">
 
-<div class="grid wrapper push">
-  <div class="unit xs-1 s-1 m-1 l-1 xl-1 gutter push-2">
-    {% pattern navigations/breadcrumbs %}
+  <div class="grid wrapper push">
+    <div class="unit xs-1 s-1 m-1 l-1 xl-1 gutter push-2">
+      {% pattern navigations/breadcrumbs %}
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-4 gutter-1-2 unit-content-distribute push">
+      {% pattern product-details/photo-array data=page %}
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-2 unit-content-distribute push">
+      {% pattern product-details/product-detail-posters data=page %}
+    </div>
   </div>
-  <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-4 gutter-1-2 unit-content-distribute push">
-    {% pattern product-details/photo-array data=page %}
-  </div>
-  <div class="unit xs-1 s-1 m-1-2 l-1-2 island-1-2 unit-content-distribute push">
-    {% pattern product-details/product-detail-posters data=page %}
-  </div>
-
-</div>
+</main>
