Add a title and description of company

--- a/css/theme.css
+++ b/css/theme.css
@@ -7,7 +7,7 @@
   --color-whatever: #ed8575;
 
   --font-primary: "Muli", "Trebuchet MS", Muli, sans-serif;
-  --font-secondary: "source Code Pro", Menlo, Consolas, monospace;
+  --font-secondary: "source Code Pro", Menlo, Consolas, monospace;（delete）
 }
 
 html {
