--- a/_patterns/buttons/buttons.css
+++ b/_patterns/buttons/buttons.css
@@ -6,5 +6,20 @@
 
 .btn:hover {
   background-color: var(--color-primary);
-  border-color: var(--color-primary); 
+  border-color: var(--color-primary);
+}
+
+.btn-ghost {
+  background-color: transparent;
+  color: var(--color-primary-dark);
+}
+
+.btn-ghost:hover {
+  color: var(--color-secondary-light);
+}
+
+.btn-light {
+  background-color: var(--color-secondary);
+  border-color: var(--color-secondary);
+  color: var(--color-primary-dark)
 }
