--- a/css/theme.css
+++ b/css/theme.css
@@ -2,6 +2,7 @@
   --color-primary: #a74e25;
   --color-primary-light: #f8cb60;
   --color-secondary: #fbd2bd;
+  --color-secondary-light: #fff;
   --color-accent: #f4934b;
   --color-neutral-beige: #e2e2e2;
   --color-whatever: #ed8575;
