--- a/css/theme.css
+++ b/css/theme.css
@@ -11,3 +11,12 @@
 html {
   font-family: var(--font-primary);
 }
+
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
+mark{
+  background-color: #D2E0E2;
+}
