--- a/_patterns/footer/footer.css
+++ b/_patterns/footer/footer.css
@@ -1,10 +1,10 @@
 footer {
-  background-color: var(--color-primary);
   text-decoration: none;
+  background-color: var(--color-primary-light);
 }
 
 footer li a {
-  color: var(--color-secondary);
-  padding: .42em 0;
   text-decoration: none;
+  color: var(--color-primary);
+  padding: .4em 0;
 }
